chore: clean up templates

--- a/src/App/templates/app/blog.html.twig
+++ b/src/App/templates/app/blog.html.twig
@@ -1,3 +1,11 @@
-<h1>{{ title }}</h1>
+{% extends '@layout/default.html.twig' %}
 
-{{ content|raw }}
+{% block title %}{{ title }}{% endblock %}
+
+{% block content %}
+
+    <h1>{{ title }}</h1>
+
+    {{ content|raw }}
+
+{% endblock %}
