--- a/src/App/templates/layout/default.html.twig
+++ b/src/App/templates/layout/default.html.twig
@@ -27,7 +27,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <!-- Brand -->
-                    <a class="navbar-brand" href="{{ path('home') }}">
+                    <a class="navbar-brand" href="/">
                         <img src="https://docs.laminas.dev/img/laminas-mezzio-rgb.svg" alt="Laminas Mezzio" height="56" />
                     </a>
                 </div>
@@ -42,11 +42,6 @@
                         <li class="nav-item">
                             <a href="https://github.com/mezzio/mezzio" target="_blank" class="nav-link">
                                 <i class="fa fa-wrench"></i> Contribute
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{{ path('api.ping') }}" class="nav-link">
-                                Ping Test
                             </a>
                         </li>
                     </ul>
