--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -14,7 +13,13 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body>
+    <body class="bg-white">
+
+        {{ include('nav.html.twig') }}
+
         {% block body %}{% endblock %}
+
+        {{ include('footer.html.twig') }}
+
     </body>
 </html>
