--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,5 +1,84 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1 class="text-3xl font-bold underline">Hello!</h1>
+    <main class="lg:relative">
+        <div class="mx-auto max-w-7xl w-full pt-16 pb-20 text-center lg:py-48 lg:text-left">
+            <div class="px-4 lg:w-1/2 sm:px-8 xl:pr-16">
+                <h1 class="text-4xl tracking-tight font-bold text-gray-900 sm:text-5xl sm:tracking-tight md:text-6xl md:tracking-tight lg:text-5xl lg:tracking-tight xl:text-6xl xl:tracking-tight">
+                    <span class="xl:inline">Ben Ramsey is a <a class="text-indigo-600" href="/code">software engineer</a>, <a class="text-indigo-600" href="/writings">author</a>, and <a class="text-indigo-600" href="/talks">speaker</a>.</span>
+                </h1>
+                <p class="mt-3 max-w-md mx-auto text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl">I&rsquo;ve spent over 20 years honing my craft and learning from the best the open source community has to offer. Let me share what I&rsquo;ve learned with you.</p>
+            </div>
+        </div>
+        <div class="relative w-full h-64 sm:h-72 md:h-96 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2 lg:h-full">
+            <img class="absolute inset-0 w-full h-full object-cover object-top" src="https://files.benramsey.com/ws/ben-ramsey-php-experience-2016-speaking-homepage.jpg" alt="">
+        </div>
+    </main>
+
+    <div class="bg-white pt-16 pb-20 px-4 sm:px-6 lg:pt-24 lg:pb-28 lg:px-8">
+        <div class="relative max-w-lg mx-auto divide-y-2 divide-gray-200 lg:max-w-7xl">
+            <div>
+                <h2 class="text-3xl tracking-tight font-bold text-gray-900 sm:text-4xl sm:tracking-tight">Recent activities</h2>
+                <p class="mt-3 text-xl text-gray-500 sm:mt-4">Here&rsquo;s a look at what I’ve been working on lately.</p>
+            </div>
+            <div class="mt-12 grid gap-16 pt-12 lg:grid-cols-3 lg:gap-x-5 lg:gap-y-12">
+                <div>
+                    <div>
+                        <a href="#" class="inline-block">
+                            <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800"> Article </span>
+                        </a>
+                    </div>
+                    <a href="#" class="block mt-4">
+                        <p class="text-xl font-semibold text-gray-900">Boost your conversion rate</p>
+                        <p class="mt-3 text-base text-gray-500">Nullam risus blandit ac aliquam justo ipsum. Quam mauris volutpat massa dictumst amet. Sapien tortor lacus arcu.</p>
+                    </a>
+                    <div class="mt-6 flex items-center">
+                        <div class="flex space-x-1 text-sm text-gray-500">
+                            <time datetime="2020-03-16"> Mar 16, 2020 </time>
+                            <span aria-hidden="true"> &middot; </span>
+                            <span> 6 min read </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <a href="#" class="inline-block">
+                            <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-pink-100 text-pink-800"> Video </span>
+                        </a>
+                    </div>
+                    <a href="#" class="block mt-4">
+                        <p class="text-xl font-semibold text-gray-900">How to use search engine optimization to drive sales</p>
+                        <p class="mt-3 text-base text-gray-500">Nullam risus blandit ac aliquam justo ipsum. Quam mauris volutpat massa dictumst amet. Sapien tortor lacus arcu.</p>
+                    </a>
+                    <div class="mt-6 flex items-center">
+                        <div class="flex space-x-1 text-sm text-gray-500">
+                            <time datetime="2020-03-10"> Mar 10, 2020 </time>
+                            <span aria-hidden="true"> &middot; </span>
+                            <span> 4 min read </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <a href="#" class="inline-block">
+                            <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-green-100 text-green-800"> Case Study </span>
+                        </a>
+                    </div>
+                    <a href="#" class="block mt-4">
+                        <p class="text-xl font-semibold text-gray-900">Improve your customer experience</p>
+                        <p class="mt-3 text-base text-gray-500">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab iure iusto fugiat commodi sequi.</p>
+                    </a>
+                    <div class="mt-6 flex items-center">
+                        <div class="flex space-x-1 text-sm text-gray-500">
+                            <time datetime="2020-02-12"> Feb 12, 2020 </time>
+                            <span aria-hidden="true"> &middot; </span>
+                            <span> 11 min read </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
