--- a/templates/layout/base.html.twig
+++ b/templates/layout/base.html.twig
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
@@ -12,14 +13,15 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+
     </head>
     <body class="bg-white">
 
-        {{ include('nav.html.twig') }}
+        {{ include('layout/nav.html.twig') }}
 
         {% block body %}{% endblock %}
 
-        {{ include('footer.html.twig') }}
+        {{ include('layout/footer.html.twig') }}
 
     </body>
 </html>
