--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout/base.html.twig' %}
 
 {% block body %}
-    <main class="lg:relative">
+    <main class="lg:relative bg-gray-100">
         <div class="mx-auto max-w-7xl w-full pt-16 pb-20 text-center lg:py-48 lg:text-left">
             <div class="px-4 lg:w-1/2 sm:px-8 xl:pr-16">
                 <h1 class="text-4xl tracking-tight font-bold text-gray-900 sm:text-5xl sm:tracking-tight md:text-6xl md:tracking-tight lg:text-5xl lg:tracking-tight xl:text-6xl xl:tracking-tight">
