--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -5,11 +5,12 @@
 [x-cloak] { display: none !important; }
 
 .heading-permalink {
+    @apply text-indigo-600;
     text-decoration: none;
-    color:transparent;
     display: inline-block;
     width: 1em;
     margin-left: -1em;
+    visibility: hidden;
 }
 
 .heading-permalink:hover,
@@ -18,6 +19,5 @@ h2:hover .heading-permalink,
 h3:hover .heading-permalink,
 h4:hover .heading-permalink,
 h5:hover .heading-permalink {
-    text-decoration: none;
-    @apply text-indigo-600;
+    visibility: visible;
 }
