--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -21,3 +21,7 @@ h4:hover .heading-permalink,
 h5:hover .heading-permalink {
     visibility: visible;
 }
+
+#app-main-content p:first-child {
+    @apply mt-8 text-xl text-gray-500 leading-8;
+}
