--- a/templates/layout/base.html.twig
+++ b/templates/layout/base.html.twig
@@ -15,7 +15,7 @@
         {% endblock %}
 
     </head>
-    <body class="bg-white">
+    <body class="bg-gray-50">
 
         {{ include('layout/nav.html.twig') }}
 
