--- a/templates/layout/nav.html.twig
+++ b/templates/layout/nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="bg-white shadow" x-data="{ showMobileMenu: false }">
+<nav class="bg-white border-b" x-data="{ showMobileMenu: false }">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16">
             <div class="flex">
