--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -6,7 +6,7 @@
         {% block content %}
             <div class="relative px-4 sm:px-6 lg:px-8">
                 <div id="app-main-content" class="mt-6 prose prose-indigo prose-lg text-gray-500 mx-auto">
-                    {{ content }}
+                    {{ content|raw }}
                 </div>
             </div>
         {% endblock %}
