--- a/templates/post.html.twig
+++ b/templates/post.html.twig
@@ -24,6 +24,10 @@
                     {{ post.content|raw }}
                 </div>
 
+                <div class="border-t mt-12 prose prose-indigo prose-lg mx-auto text-center">
+                    <p class="mt-12"><a class="tracking-wide" href="{{ path('blog_list') }}">View All Posts</a></p>
+                </div>
+
             </article>
         </main>
     {% endblock %}
