--- a/templates/post/split-with-image.html.twig
+++ b/templates/post/split-with-image.html.twig
@@ -57,6 +57,10 @@
                         {{ post.content|raw }}
                     </div>
 
+                    <div class="border-t mt-12 prose prose-indigo text-center">
+                        <p class="mt-12 text-lg"><a class="tracking-wide" href="{{ path('blog_list') }}">View All Posts</a></p>
+                    </div>
+
                 </article>
             </div>
         </div>
