--- a/assets/styles/_colors.scss
+++ b/assets/styles/_colors.scss
@@ -15,6 +15,7 @@
   --color-background: var(--yellow);
   --color-icon-base: var(--gray-dark);
   --color-icon-hover: var(--black);
+  --color-link: var(--red);
   --color-text: var(--black);
 
   @media (prefers-color-scheme: dark) {
@@ -22,6 +23,7 @@
     --color-background: var(--black);
     --color-icon-base: var(--gray-light);
     --color-icon-hover: var(--yellow);
+    --color-link: var(--cyan);
     --color-text: var(--white);
   }
 }
