continue progress on home page layout

--- a/assets/styles/_icons.scss
+++ b/assets/styles/_icons.scss
@@ -10,32 +10,35 @@
         }
 
         &.github {
-          height: 43.15px;
-          width: 40.45px;
+          height: 64.725px;
+          margin-top: 9px;
+          width: 60.675px;
 
           -webkit-mask: url("../svg/github.svg") no-repeat center / contain;
           mask: url("../svg/github.svg") no-repeat center / contain;
         }
 
         &.mastodon {
-          height: 44.9px;
-          width: 39.3px;
+          height: 67.35px;
+          margin-top: 16.25px;
+          width: 58.95px;
 
           -webkit-mask: url("../svg/mastodon.svg") no-repeat center / contain;
           mask: url("../svg/mastodon.svg") no-repeat center / contain;
         }
 
         &.linkedin {
-          height: 49.95px;
-          width: 47.3px;
+          height: 74.925px;
+          width: 65.55px;
 
           -webkit-mask: url("../svg/linkedin.svg") no-repeat center / contain;
           mask: url("../svg/linkedin.svg") no-repeat center / contain;
         }
 
         &.paper-plane {
-          height: 34.95px;
-          width: 34.95px;
+          height: 52.425px;
+          margin-top: 16px;
+          width: 52.425px;
 
           -webkit-mask: url("../svg/paper-plane.svg") no-repeat center / contain;
           mask: url("../svg/paper-plane.svg") no-repeat center / contain;
