--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -14,8 +14,9 @@
             <nav aria-labelledby="contact">
                 <p id="contact" class="sr" aria-hidden="true">You may follow or contact me online at</p>
                 <ul>
-                    <li><a href="https://github.com/ramsey" rel="me" aria-labelledby="contact-github"><span class="icon github" aria-hidden="true"></span><span class="sr" id="contact-github">GitHub</span></a></li>
                     <li><a href="https://phpc.social/@ramsey" rel="me" aria-labelledby="contact-mastodon"><span class="icon mastodon" aria-hidden="true"></span><span class="sr" id="contact-mastodon">Mastodon</span></a></li>
+                    <li><a href="https://github.com/ramsey" rel="me" aria-labelledby="contact-github"><span class="icon github" aria-hidden="true"></span><span class="sr" id="contact-github">GitHub</span></a></li>
+                    <li><a href="https://speakerdeck.com/ramsey" rel="me" aria-labelledby="contact-speaker-deck"><span class="icon speaker-deck" aria-hidden="true"></span><span class="sr" id="contact-speaker-deck">Speaker Deck</span></a></li>
                     <li><a href="https://www.linkedin.com/in/benramsey/" rel="me" aria-labelledby="contact-linkedin"><span class="icon linkedin" aria-hidden="true"></span><span class="sr" id="contact-linkedin">Linked In</span></a></li>
                     <li><a href="mailto:ben@ramsey.dev" aria-labelledby="contact-email"><span class="icon paper-plane" aria-hidden="true"></span><span class="sr" id="contact-email">Email</span></a></li>
                 </ul>
