--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}Ben Ramsey{% endblock %}</title>
+
+        <title>{% block title %}{% endblock %}</title>
+
         <link rel="icon" href="data:image/svg+xml,<svg width=%22100%25%22 height=%22100%25%22 viewBox=%220 0 266 156%22 version=%221.1%22 xmlns=%22http://www.w3.org/2000/svg%22 xml:space=%22preserve%22 style=%22fill:fuchsia;fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;%22><path d=%22M48.789,0L205.391,0C217.164,0 227.227,2.147 235.579,6.441C243.932,10.735 250.216,16.536 254.432,23.843C258.648,31.15 260.756,39.098 260.756,47.686C260.756,57.178 258.051,65.766 252.642,73.45C247.233,81.134 239.358,86.784 229.017,90.4L265.529,155.488L206.346,155.488L177.231,98.762L157.663,98.762L157.663,155.488L47.368,155.488C38.684,155.488 30.71,153.755 23.447,150.29C16.184,146.825 10.46,141.966 6.276,135.713C2.092,129.46 0,122.266 0,114.13C0,92.735 10.342,79.778 31.026,75.258L31.026,74.354C12.868,69.382 3.789,57.329 3.789,38.194C3.789,30.962 5.803,24.408 9.829,18.532C13.855,12.656 19.302,8.098 26.171,4.859C33.039,1.62 40.578,0 48.789,0ZM104.92,119.328L65.131,119.328C61.657,119.328 58.776,118.16 56.486,115.825C54.197,113.49 53.052,110.589 53.052,107.124L53.052,104.864C53.052,101.399 54.197,98.498 56.486,96.163C58.776,93.828 61.657,92.66 65.131,92.66L104.92,92.66L104.92,119.328ZM207.062,49.72C207.062,45.652 205.63,42.262 202.766,39.55C199.902,36.838 196.402,35.482 192.266,35.482L157.663,35.482L157.663,64.184L192.266,64.184C196.402,64.184 199.902,62.79 202.766,60.003C205.63,57.216 207.062,53.788 207.062,49.72ZM104.92,60.568L68.92,60.568C65.447,60.568 62.565,59.4 60.276,57.065C57.986,54.73 56.841,51.829 56.841,48.364L56.841,46.104C56.841,42.789 58.026,39.964 60.394,37.629C62.762,35.294 65.604,34.126 68.92,34.126L104.92,34.126L104.92,60.568Z%22/></svg>">
         <link rel="mask-icon" href="{{ asset('svg/br.svg') }}" color="fuchsia">
+
+        <link rel="alternate" type="application/atom+xml" title="Blog feed for benramsey.com" href="{{  asset('feeds/blog.xml') }}">
+
+        {% block head %}
+        {% endblock %}
+
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('styles/app.scss') }}">
         {% endblock %}
@@ -13,6 +22,14 @@
         {% block javascripts %}
             {{ importmap() }}
         {% endblock %}
+
+        <!-- Apple Web Application Configuration -->
+        <!-- https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html -->
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="Ben Ramsey">
+        <link rel="apple-touch-icon" href="{{ asset('img/apple-touch-icon.png') }}">
+
     </head>
     <body class="br {{ pageClass }}">
         {% block body %}{% endblock %}
