disable Cloudflare email obfuscation

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -34,7 +34,7 @@
                     <li><a href="https://github.com/ramsey" rel="me" class="u-url" aria-labelledby="contact-github"><span class="icon github" aria-hidden="true"></span><span class="sr" id="contact-github">GitHub</span></a></li>
                     <li><a href="https://speakerdeck.com/ramsey" rel="me" class="u-url" aria-labelledby="contact-speaker-deck"><span class="icon speaker-deck" aria-hidden="true"></span><span class="sr" id="contact-speaker-deck">Speaker Deck</span></a></li>
                     <li><a href="https://www.linkedin.com/in/benramsey/" rel="me" class="u-url" aria-labelledby="contact-linkedin"><span class="icon linkedin" aria-hidden="true"></span><span class="sr" id="contact-linkedin">Linked In</span></a></li>
-                    <li><a href="mailto:ben@ramsey.dev" class="u-email" aria-labelledby="contact-email"><span class="icon paper-plane" aria-hidden="true"></span><span class="sr" id="contact-email">Email</span></a></li>
+                    <li><!--email_off--><a href="mailto:ben@ramsey.dev" class="u-email" aria-labelledby="contact-email"><span class="icon paper-plane" aria-hidden="true"></span><span class="sr" id="contact-email">Email</span></a><!--/email_off--></li>
                 </ul>
             </nav>
         </header>
