--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -30,6 +30,7 @@
             <nav aria-labelledby="contact">
                 <p id="contact" class="sr" aria-hidden="true">You may follow or contact me online at</p>
                 <ul>
+                    <li><a href="https://ben.ramsey.dev" rel="me" class="u-url" aria-labelledby="contact-web"><span class="icon home" aria-hidden="true"></span><span class="sr" id="contact-web">My website</span></a></li>
                     <li><a href="https://phpc.social/@ramsey" rel="me" class="u-url" aria-labelledby="contact-mastodon"><span class="icon mastodon" aria-hidden="true"></span><span class="sr" id="contact-mastodon">Mastodon</span></a></li>
                     <li><a href="https://github.com/ramsey" rel="me" class="u-url" aria-labelledby="contact-github"><span class="icon github" aria-hidden="true"></span><span class="sr" id="contact-github">GitHub</span></a></li>
                     <li><a href="https://speakerdeck.com/ramsey" rel="me" class="u-url" aria-labelledby="contact-speaker-deck"><span class="icon speaker-deck" aria-hidden="true"></span><span class="sr" id="contact-speaker-deck">Speaker Deck</span></a></li>
