--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -58,7 +58,8 @@
           }
         }
 
-        p {
+        h2 {
+          font-size: 1em;
           line-height: 1.45em;
           margin-top: -4.55em;
 
@@ -77,7 +78,7 @@
       nav {
         float: right;
         text-align: right;
-        margin-top: -17.25em;
+        margin-top: -17em;
 
         ul {
           align-items: start;
@@ -140,7 +141,7 @@
           margin-bottom: 0;
         }
 
-        p {
+        h2 {
           font-size: 1.25em;
           font-style: italic;
           font-weight: bold;
