--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -182,7 +182,7 @@
         margin: 0 0 0.75em 0;
         padding: 0 0.25em;
 
-        @media (max-width: v.$viewportSmallerest) {
+        @media (max-width: v.$viewportSmaller) {
           text-align: left;
         }
       }
