--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -139,14 +139,9 @@
           width: 80%;
         }
 
-        @media (max-width: v.$viewportSmallest) {
+        @media (max-width: v.$viewportSmaller) {
           left: 20%;
           width: 60%;
-        }
-
-        @media (max-width: v.$viewportSmaller) {
-          left: 25%;
-          width: 50%;
         }
 
         ul {
@@ -159,6 +154,10 @@
 
           @media (max-width: v.$viewportSmallest) {
             flex-wrap: wrap;
+
+            li {
+              flex-basis: 25%;
+            }
           }
         }
       }
